fix spacing on footer

--- a/src/components/Footer/styles.css
+++ b/src/components/Footer/styles.css
@@ -1,12 +1,15 @@
 /* Custom properties are accessed using the CSS var() function (e.g., color: var(--primary-color);)*/
 :root {
-    --dark-bg-color: #010112ea;
-    --card-bg-color: #FFFCF2;
-    --main-bg-color: #d1cca6;
-    --text-color: #403D39;
-    --feature-color: #ebeb2d;
+  --dark-bg-color: #010112ea;
+  --text-color: #FFFCF2;
+  --main-bg-color: #d1cca6;
+  --secondary-text-color: #403D39;
+  --feature-color: #ebeb2d;
+  --transparent-bg: #e4ebeb47;
   }
 
 .footer {
     background-color: var(--dark-bg-color);
+    color: var(--text-color);
+    text-transform:capitalize;
 }
