--- a/src/index.css
+++ b/src/index.css
@@ -1,34 +1,11 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-
 /* Custom properties are accessed using the CSS var() function (e.g., color: var(--primary-color);)*/
-  --dark-bg-color: #010112ea;
-  --card-bg-color: #FFFCF2;
-  --main-bg-color: #d1cca6;
-  --text-color: #403D39;
-  --feature-color: #ebeb2d;
-}
-
-
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+--dark-bg-color: #010112ea;
+--text-color: #FFFCF2;
+--main-bg-color: #d1cca6;
+--secondary-text-color: #403D39;
+--feature-color: #ebeb2d;
+--transparent-bg: #e4ebeb47;
 }
 
 h1 {
@@ -47,24 +24,9 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+
+body {
+  background-color: var(--main-bg-color);
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
 
